--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  country_search:
-    path: ../
+  country_search: ^2.1.1
 
 dev_dependencies:
   flutter_test:
