feat: add Korean language support and optimize search performance
- Add Korean localization with 245+ country names
- Optimize search algorithm for 4.7x faster performance
- Update documentation with customization instructions
- Remove performance test files from repository
- Clean up code comments and debug statements

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,9 @@ app.*.map.json
 # Coverage
 coverage/
 
+# Test files (performance and speed tests)
+test/performance_test.dart
+test/speed_comparison_test.dart
+
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages 
