feat: optimize search algorithm with single-pass and early exit
- Restore simple search logic from version 2.0.2
- Add single-pass optimization with early exit
- Improve performance by reducing redundant checks
- Add kDebugMode protection for debug messages
- Maintain exact priority order: exact → startsWith → contains
- Fix example to use local package version

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  country_search: ^2.3.0
+  country_search:
+    path: ../
 
 dev_dependencies:
   flutter_test:
