Initial commit: Universal Selector with Multi-Select support
- Universal item selector for Flutter apps
- Multi-select functionality with configurable limits
- Fuzzy search with typo support
- Customizable UI with dark/light themes
- High performance and lightweight (~50KB)
- Comprehensive test coverage
- Full documentation and examples

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_country_picker_example
-description: Example app for flutter_country_picker package
+name: universal_selector_example
+description: Example app for universal_selector package
 version: 1.0.0
 
 environment:
@@ -9,9 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  country_search:
+  universal_selector:
     path: ../
 
 dev_dependencies:
