--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: universal_selector
+name: multiselector
 description: Fast and lightweight universal item selector for Flutter with fuzzy search and customizable UI — lightweight and flexible.
 version: 1.0.0
-homepage: https://github.com/stanislavworldin/universal_selector
-repository: https://github.com/stanislavworldin/universal_selector
-issue_tracker: https://github.com/stanislavworldin/universal_selector/issues
-documentation: https://github.com/stanislavworldin/universal_selector#readme
+homepage: https://github.com/stanislavworldin/multiselector
+repository: https://github.com/stanislavworldin/multiselector
+issue_tracker: https://github.com/stanislavworldin/multiselector/issues
+documentation: https://github.com/stanislavworldin/multiselector#readme
 topics:
   - selector
   - picker
