Rename package to fuzzy_search_engine to avoid naming conflict

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fuzzy_search:
+  fuzzy_search_engine:
     path: ../
 
 dev_dependencies:
